--- a/package.json
+++ b/package.json
@@ -38,12 +38,16 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "file-loader": "^6.0.0",
     "install": "^0.13.0",
     "node-sass": "^4.14.1",
     "npm": "^6.14.5",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-svg-loader": "^3.0.3",
+    "redux": "^4.0.5",
     "sass-loader": "^8.0.2"
   },
   "eslintConfig": {
