--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "react-svg-loader": "^3.0.3",
     "redux": "^4.0.5",
     "sass-loader": "^8.0.2"
