--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     "jsx-a11y/anchor-is-valid": [ "error", { "components": ["Link"], "specialLink": ["to"]}],
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/no-static-element-interactions": "off",
+    "jsx-a11y/no-noninteractive-element-interactions": "off",
     "react/forbid-prop-types": "off",
     "react/no-did-update-set-state": "off",
     "react/no-did-mount-set-state": "off",
