--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode development --host 0.0.0.0",
+    "watch": "webpack-dev-server --mode development --host 0.0.0.0",
     "build": "webpack --mode development"
   },
   "author": "",
