--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "prop-types": "^15.7.2",
