--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack-dev-server --mode development --host 0.0.0.0",
-    "build": "webpack --mode development"
+    "watch": "webpack-dev-server --config webpack.dev.js --host 0.0.0.0",
+    "build": "webpack --config webpack.prod.js"
   },
   "author": "",
   "license": "ISC",
