--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "devDependencies": {
     "@babel/cli": "^7.14.5",
     "@babel/core": "^7.14.6",
+    "@babel/eslint-parser": "^7.14.7",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^3.6.0",
     "eslint": "^6.8.0",
