--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           context: ./
           file: ./Dockerfile
-          platforms: linux/amd64,linux/arm/v7
+          platforms: linux/arm/v7
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/personal-webapp:latest
 
