--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@master
         with:
-          platforms: all
+          platforms: linux/amd64,linux/arm/v7
           
       - name: Set up Docker Buildx
         id: buildx
@@ -45,7 +45,7 @@ jobs:
         with:
           context: ./
           file: ./Dockerfile
-          platforms: linux/arm/v7
+          platforms: linux/amd64,linux/arm/v7
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/personal-webapp:latest
 
