--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,11 +8,13 @@
     "spaced-comment": "error",
     "func-names": "off",
     "linebreak-style": "off",
+    "react/button-has-type": "off",
     "react/destructuring-assignment": "off",
     "react/prefer-stateless-function": ["off", { "ignorePureComponents": true }],
     "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"]}],
     "jsx-a11y/anchor-is-valid": [ "error", { "components": ["Link"], "specialLink": ["to"]}],
     "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/label-has-associated-control": "off",
     "jsx-a11y/no-static-element-interactions": "off",
     "jsx-a11y/no-noninteractive-element-interactions": "off",
     "react/forbid-prop-types": "off",
