update docker hub package name

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64,linux/arm/v7
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/personal-webapp:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/jbxchung-web:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
