--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.2",
     "node-sass": "^4.14.1",
     "prettier": "^2.3.2",
     "react-dev-utils": "^10.2.1",
