--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "express": "^4.17.1",
+    "express": "^4.18.1",
+    "html-react-parser": "^1.4.12",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-google-recaptcha": "^2.1.0",
-    "react-html-parser": "^2.0.2",
     "react-redux": "^8.0.1",
     "react-router-dom": "^5.2.0",
     "react-scaled-timeline": "^1.0.3",
