--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "express": "^4.18.1",
+    "express-rate-limit": "^6.4.0",
     "html-react-parser": "^1.4.12",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
